                     but can recover (madwifi)
                    Modified gpsmap power interpolation to limit ranges
                     in a circle instead of square (much nicer looking)
                    Modified gpsmap power interpolation to scale the distance
                     pixels are examined in based on map size.
Dec 09 2003  3.1.0  Fixed prism54g override of channel change failure in
                     entering monitor mode.
                    Added more useful error messages to kismet_server
                    Finally fixed kismet_drone and removed debugging info.
                     Should be stable for normal use.
                    Added rintf define for uclibc
                    Added usleep between blanking ssid and setting iwpriv
                     controls for orinoco to keep Socket CF cards from getting
                     unhappy.  (Thanks, TZ)
                    Initial merge of Pedro's OpenBSD patches
                    Modified gpsmap power interpolation to get signal levels
                     from network sample points instead of tracklog.  This
                     also enables filtering of interpolation graphs.
                    Modified wrt54g packet source to discard max_cap_len 
                     packets which get spawned by the linksys in monitor
                     while people are associated.
                    Fixed channel fetching for wlanng-avs
Dec 08 2003  3.1.0  Fixed util.h to include math.h outside of the wext
                     ifdef.
                    Removed mentions of signal quality from the panels client.
                     This only ever got in there because cisco lies and reports
                     it.  Firmwares don't seem to compute quality measurements
                     in rfmon, so this isn't useful to us, and confuses some
                     people.
                    Tweaked util.cc to use rintf for *bsd compatability